chap analyse, restructuration

--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -8,3 +8,6 @@
 \end{itemize}
 
 \cite{Oudeyer2010OnTI} : biologie liée dans les deux sens à l'aspect computationnel.
+
+
+But : montrer comment un mécanisme de recherche de consensus entre cartes de Kohonen permet de construire des architectures apprenant des relations multimodales.
