--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -2,6 +2,8 @@
 \ifSubfilesClassLoaded{
     \dominitoc
     \tableofcontentsfile
+    \pagenumbering{arabic}
+    \setcounter{page}{1}
 }{}
 \begin{document}
 \chapter{Convergence de la relaxation}
@@ -21,6 +23,9 @@ Pour considérer l'algorithme de relaxation comme une recherche de BMU, nous dev
 \item L'activité au point d'arrivée de la relaxation traduit-elle 
 \item Quels sont les paramètres à prendre en compte dans l'algorithme de relaxation ?
 \end{itemize}
+
+\section{Du calcul cellulaire au calcul à l'échelle d'une carte}
+
 
 \section{Formalisation de l'algorithme de relaxation}
 
