--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1485,3 +1485,46 @@
 	doi = {10.1007/978-3-662-43505-2_37},
 	pages = {697--714},
 }
+
+
+@article{ShwartzZiv2017OpeningTB,
+  title={Opening the Black Box of Deep Neural Networks via Information},
+  author={Ravid Shwartz-Ziv and Naftali Tishby},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1703.00810}
+}
+
+@article{ballard_cortical_1986,
+	title = {Cortical connections and parallel processing: {Structure} and function},
+	volume = {9},
+	issn = {0140-525X, 1469-1825},
+	shorttitle = {Cortical connections and parallel processing},
+	doi = {10.1017/S0140525X00021555},
+	abstract = {The cerebral cortex is a rich and diverse structure that is the basis of intelligent behavior. One of the deepest mysteries of the function of cortex is that neural processing times are only about one hundred times as fast as the fastest response times for complex behavior. At the very least, this would seem to indicate that the cortex does massive amounts of parallel computation.},
+	language = {en},
+	number = {01},
+	journal = {Behavioral and Brain Sciences},
+	author = {Ballard, Dana H.},
+	month = mar,
+	year = {1986},
+	pages = {67},
+}
+
+
+@article{fefferman_testing_2016,
+	title = {Testing the manifold hypothesis},
+	volume = {29},
+	issn = {0894-0347, 1088-6834},
+	url = {https://www.ams.org/jams/2016-29-04/S0894-0347-2016-00852-4/},
+	doi = {10.1090/jams/852},
+	language = {en},
+	number = {4},
+	urldate = {2022-12-14},
+	journal = {Journal of the American Mathematical Society},
+	author = {Fefferman, Charles and Mitter, Sanjoy and Narayanan, Hariharan},
+	month = feb,
+	year = {2016},
+	pages = {983--1049},
+	file = {Fefferman et al. - 2016 - Testing the manifold hypothesis.pdf:/home/noemie/Zotero/storage/IIIEL58U/Fefferman et al. - 2016 - Testing the manifold hypothesis.pdf:application/pdf},
+}
