--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %Documentclass thesul modifée pour la page de garde : thesul-cs
-\documentclass[11pt]{thesul-cs}
+\documentclass[12pt]{thesul-cs}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
@@ -35,6 +35,8 @@
 \usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
 \usepackage{mathtools}
 \usepackage{subfiles}
+%\SetRealMargins{26mm}{16mm}
+
 \DefineBibliographyStrings{french}{
   %  backrefpage={see p.},
   backrefpage={},
@@ -42,7 +44,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-%\addbibresource{./Biblio/biblio.bib}
+\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
@@ -58,7 +60,7 @@
 \dominitoc
 \include{titlepage}
 \tableofcontents
-%\subfile{00-Introduction/source}
+\subfile{00-Introduction/source}
 %\subfile{01-Modularite/source}
 \mainmatter
 
@@ -66,10 +68,11 @@
 \subfile{02-Architectures/source}
 \subfile{03-SOM/source}
 \subfile{04-Representation/source}
-%\subfile{05-Indicateur/source}
+\subfile{05-Indicateur/source}
 \subfile{06-Analyse/source}
+\subfile{06b-Analyse-2D/source}
 \subfile{07-Relaxation/source}
-\subfile{08-Application/source}
+%\subfile{08-Application/source}
 \subfile{Conclusion}
 %Bibliography files
 
